--- a/Testing/Testing/Views/ItemDetailPage.xaml
+++ b/Testing/Testing/Views/ItemDetailPage.xaml
@@ -5,6 +5,8 @@
              Title="{Binding Title}">
 
     <StackLayout Spacing="20" Padding="15">
+        <Label Text="Name:" FontSize="Medium" />
+        <Label Text="{Binding Name}" FontSize="Small"/>
         <Label Text="Text:" FontSize="Medium" />
         <Label Text="{Binding Text}" FontSize="Small"/>
         <Label Text="Description:" FontSize="Medium" />
